# elitho

./: .gitignore  LICENSE  README.md  pyproject.toml
elitho/: __init__.py  absorber.py  cli.py  config.py  descriptors.py  diffraction_order.py  electro_field.py  fourier.py  gui.py  intensity.py  m3d.py  mask_pattern.py  multilayer.py  pupil.py  source.py  stcc.py  vector_potential.py
elitho/utils/: backend.py  image_processing.py  mat_utils.py  saver.py
