[project]
name = "elitho"
version = "0.1.0"
description = "Python-based EUV simulation tool for lithography process development and research."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "streamlit>=1.20.0",
]

[project.scripts]
elitho-gui = "elitho.cli:run_gui"
